# aichallenge2024-trajectory-editor

./: .pre-commit-config.yaml  README.md  editor.py  raceline.csv  rviz_plugins.md  shell.sh  tools.rviz  trj.csv
.post/: post.csv
cmd_line/: csv_editor  csv_viewer  raceline_to_traj
csv/: centerline_15km.csv  csv_fusion.py  lane.csv  raceline.csv  raceline_awsim_30km.csv  raceline_awsim_30km_pp.csv  raceline_base_15km.csv  trj2.csv
editor/: editor.py  shell.sh
editor/.post/: post.csv
editor_tool_server/: CMakeLists.txt  package.xml
editor_tool_server/config/: editor_tool_server.yaml
editor_tool_server/include/editor_tool_server/: interactive_server.hpp
editor_tool_server/src/: interactive_server.cpp
editor_tool_srvs/: CMakeLists.txt
editor_tool_srvs/srv/: SelectRange.srv
raceline_to_traj/: raceline_to_traj.py
rviz_editor_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_editor_plugins/include/rviz_editor_plugins/: csv_marker_display.hpp  editor_tool.hpp
rviz_editor_plugins/src/: csv_marker_display.cpp  csv_marker_display.hpp  editor_tool.cpp
test/: inner_lane_bound.csv  out_lane_bound.csv
view/: traj_viewer.py
